Selected aria tab is not indicated in VoiceOver or announced when selected.
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
STR:
- Load https://mdn.mozillademos.org/en-US/docs/Web/Accessibility/ARIA/Roles/Tab_Role$samples/Example
- Navigate to second tab and activate it.
Expected:
Safari says "press Second Tab, selected, tab, 2 of 3"
Actual:
Firefox says "Switch Second Tab, tab"
Three things to note:
- Firefox identifies the tab group correctly
- The selected state and selection action are not announced
- The position of the tabs in the group is not announced (ie "2 of 3").
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
I made more generalized mozSelectableAccessible and
mozSelectableChildAccessible classes for other things that will need
this kind of support.
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
I could reproduce the initial issue using old Nightly build (2020-02-27) on macOS 10.15.4. Using latest beta build 76.0b4 the tabs are announced with the message "Second Tab, tab, 2 of 3", the announcement that this is the selected tab will not be there only if I click the tab first then the message will change to "Second Tab, selected, tab, 2 of 3". Also I can see that voiceover does not announce when I switch tabs using mouse cursor but only with the Tab key and arrow keys.
Should we log a bug on this behaviour? I noticed that Safari behaves the same as Firefox, but Chrome does not, I can use the mouse cursor to switch between tabs and those are announced by voiceover as selected tabs.
| Assignee | ||
Comment 5•5 years ago
|
||
What you are seeing is the expected behavior. In the STR I might have missed a step where the second tab is the selected one.
Also, using a mouse cursor will not work in the above example because they use tabindex=-1 so focus is not received via mouse and thus the VO cursor will not move.
Comment 6•5 years ago
|
||
(In reply to Eitan Isaacson [:eeejay] from comment #5)
What you are seeing is the expected behavior. In the STR I might have missed a step where the second tab is the selected one.
Also, using a mouse cursor will not work in the above example because they use tabindex=-1 so focus is not received via mouse and thus the VO cursor will not move.
Thanks for the info Eitan, marking as verified fixed.
Description
•