Bug 1618700 - Implement expected attributes and events for tabs. r=morgan

I made more generalized mozSelectableAccessible and
mozSelectableChildAccessible classes for other things that will need
this kind of support.

Differential Revision: https://phabricator.services.mozilla.com/D66304

--HG--
extra : moz-landing-system : lando