accessible/mac/AccessibleWrap.mm
@@ -14,6 +14,7 @@
 #import "mozAccessible.h"
 #import "mozActionElements.h"
 #import "mozHTMLAccessible.h"
+#import "mozSelectableElements.h"
 #import "mozTableAccessible.h"
 #import "mozTextAccessible.h"
 
@@ -94,21 +95,36 @@ nsresult AccessibleWrap::HandleAccEvent(AccEvent* aEvent) {
   }
 
   uint32_t eventType = aEvent->GetEventType();
+  Accessible* accessible = nullptr;
 
-  // ignore everything but focus-changed, value-changed, caret, selection
-  // and document load complete events for now.
-  if (eventType != nsIAccessibleEvent::EVENT_FOCUS &&
-      eventType != nsIAccessibleEvent::EVENT_VALUE_CHANGE &&
-      eventType != nsIAccessibleEvent::EVENT_TEXT_VALUE_CHANGE &&
-      eventType != nsIAccessibleEvent::EVENT_TEXT_CARET_MOVED &&
-      eventType != nsIAccessibleEvent::EVENT_TEXT_SELECTION_CHANGED &&
-      eventType != nsIAccessibleEvent::EVENT_DOCUMENT_LOAD_COMPLETE &&
-      eventType != nsIAccessibleEvent::EVENT_MENUPOPUP_START &&
-      eventType != nsIAccessibleEvent::EVENT_MENUPOPUP_END)
+  switch (eventType) {
+    case nsIAccessibleEvent::EVENT_FOCUS:
+    case nsIAccessibleEvent::EVENT_VALUE_CHANGE:
+    case nsIAccessibleEvent::EVENT_TEXT_VALUE_CHANGE:
+    case nsIAccessibleEvent::EVENT_TEXT_CARET_MOVED:
+    case nsIAccessibleEvent::EVENT_TEXT_SELECTION_CHANGED:
+    case nsIAccessibleEvent::EVENT_DOCUMENT_LOAD_COMPLETE:
+    case nsIAccessibleEvent::EVENT_MENUPOPUP_START:
+    case nsIAccessibleEvent::EVENT_MENUPOPUP_END:
+      accessible = aEvent->GetAccessible();
+      break;
+    case nsIAccessibleEvent::EVENT_SELECTION:
+    case nsIAccessibleEvent::EVENT_SELECTION_ADD:
+    case nsIAccessibleEvent::EVENT_SELECTION_REMOVE: {
+      AccSelChangeEvent* selEvent = downcast_accEvent(aEvent);
+      // The "widget" is the selected widget's container. In OSX
+      // it is the target of the selection changed event.
+      accessible = selEvent->Widget();
+      break;
+    }
+    default:
+      break;
+  }
+
+  if (!accessible) {
+    // Not an event of interest.
     return NS_OK;
-
-  Accessible* accessible = aEvent->GetAccessible();
-  NS_ENSURE_STATE(accessible);
+  }
 
   mozAccessible* nativeAcc = nil;
   accessible->GetNativeInterface((void**)&nativeAcc);
@@ -188,6 +204,12 @@ void a11y::FireNativeEvent(mozAccessible* aNativeAcc, uint32_t aEventType) {
     case nsIAccessibleEvent::EVENT_MENUPOPUP_END:
       [aNativeAcc menuClosed];
       break;
+    case nsIAccessibleEvent::EVENT_SELECTION:
+    case nsIAccessibleEvent::EVENT_SELECTION_ADD:
+    case nsIAccessibleEvent::EVENT_SELECTION_REMOVE: {
+      [aNativeAcc selectionDidChange];
+      break;
+    }
   }
 
   NS_OBJC_END_TRY_ABORT_BLOCK;
@@ -205,7 +227,7 @@ Class a11y::GetTypeFromRole(roles::Role aRole) {
     }
 
     case roles::PAGETAB:
-      return [mozButtonAccessible class];
+      return [mozTabAccessible class];
 
     case roles::CHECKBUTTON:
       return [mozCheckboxAccessible class];
@@ -214,7 +236,7 @@ Class a11y::GetTypeFromRole(roles::Role aRole) {
       return [mozHeadingAccessible class];
 
     case roles::PAGETABLIST:
-      return [mozTabsAccessible class];
+      return [mozTabGroupAccessible class];
 
     case roles::ENTRY:
     case roles::STATICTEXT:
