accessible/mac/mozAccessible.mm
@@ -1131,6 +1131,16 @@ struct RoleDescrComparator {
   NS_OBJC_END_TRY_ABORT_BLOCK;
 }
 
+- (void)selectionDidChange {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
+  // One of our selected children changed.
+  NSAccessibilityPostNotification(GetObjectOrRepresentedView(self),
+                                  NSAccessibilitySelectedChildrenChangedNotification);
+
+  NS_OBJC_END_TRY_ABORT_BLOCK;
+}
+
 - (NSWindow*)window {
   NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NIL;
 
